--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>com.mkyong.core.utils.App</mainClass>
+                            <mainClass>de.horrz.dungeonfrog.DungeonFrog</mainClass>
                         </manifest>
                     </archive>
 
